--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -36,6 +36,9 @@ dependencies:
   cupertino_icons: ^1.0.8
   google_fonts: ^6.2.1
 
+  http: ^1.3.0
+  socket_io_client: ^2.0.0
+
 dev_dependencies:
   flutter_test:
     sdk: flutter
